--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,45 +1,44 @@
 html {
-    font-size: 36px;
-    font-family: "Big Shoulders Inline Display", cursive;
-    color:#95e0f7;
-    background-color: #091c2e;
+    font-size: 11px;
+    font-family: "Open Sans", sans-serif;   
   }
 
   body {
     width: 800px;
     margin: 0 auto;
-    padding: 0 20px 20px 20px;
-    border: 1px solid #95e0f7;
+    padding: 0 20px 40px 20px;
+    border: 5px solid #007fd3;
+    background-color: #091c2e;
+    color:#95e0f7;
   }
 
   h1 {
     margin:0;
+    font-family: "Big Shoulders Inline Display", sans-serif;
     font-size: 60px;
     text-align: center;
     padding: 20px 0;
-    text-shadow: 3px 3px 1px #95e0f7;
+    text-shadow: 3px 3px 1px #007fd3;
   }
 
   h2 {
     margin:0 auto;
     font-size: 54px;
     text-align: center;
-    padding: 20px 0;
-    text-shadow: 3px 3px 0 #95e0f7;
+    padding: 20px 0;   
   }
 
   h3 {
     margin:0 auto;
-    font-size: 24px;
+    font-size: 48px;
     text-align: center;
     padding: 20px 0;
-    text-shadow: 2px 2px 0 #d5e7ec;
   }
 
   h4 {
     margin:0 auto;
     font-size: 36px;
-    text-align: left;
+    text-align: center;
     padding: 20px 0;
   }
 
